upload jdk 8 to 17 and fix lombok1.18.22